test/invalid-syntax/58219_invalid_return_type/invalid_return_type.agu
-- Author: 58219, Mariana Costa
-- Semantic error: return type is invalid

let _ (n) : Int -> Boool = n + 5